project('learn-cpp-the-hard-way', 'cpp',
  default_options: ['cpp_std=c++20'])

fmt = dependency('fmt')

executable('ex02', 'ex02.cpp')
executable('ex05', 'ex05.cpp')
executable('ex06', 'ex06.cpp')
executable('ex07', 'ex07.cpp')
executable('ex08', 'ex08.cpp')
executable('ex09', 'ex09.cpp', dependencies: fmt)
executable('ex10', 'ex10.cpp', dependencies: fmt)
executable('ex11', 'ex11.cpp', dependencies: fmt)
executable('ex12', 'ex12.cpp', dependencies: fmt)
executable('ex12a', 'ex12a.cpp', dependencies: fmt)
executable('ex13', 'ex13.cpp', dependencies: fmt)
executable('ex14b', 'ex14b.cpp', dependencies: fmt)
executable('ex14c', 'ex14c.cpp', dependencies: fmt)
